# business_school_project

./: Project.py
Boris_K_project/: Invoice reader project.pptx
Kipras_D_Project/: README.md
Kipras_D_Project/Data/: strava_activities.csv
Kipras_D_Project/Report/: strava_report.ipynb
Kipras_D_Project/Scripts/: exchange_token.py  get_new_strava_data.py  get_strava_data.py
Kipras_D_Project/Visualizations/: strava_visuals.ipynb
Kornelijus R. Project/: Restaurant Meeting Logger.pptx
Lukas_D_project/: README.md
Lukas_D_project/python_app/lukas_d_final/: price_tracker.py
Rytis_B_project/: e_shop_analytics.py  e_shop_project.py  machine_learning.py  machine_learning_2.py  orders.xlsx
dan-yang/: ANALYSIS of EV CHARGING STATIONS DISTRIBUTION GLOBALLY.pptx  README.md  Report.docx
emilijaDi/: One-page.docx
ignas_gilys_project/: .gitignore  README.md
ignas_gilys_project/macos/: build.sh
jokubas_staugaitis_project/: accident_data.xlsx  readme.md  report_generator.py  summary.md
marius_balodis_project/: README.md
patrikas_styra_project/: Knygos.pptx  README.md  book_scraper.py  interested_books.json  summary.md
suprina-tamrakar-text-sentiment-analysis/: .gitignore
suprina-tamrakar-text-sentiment-analysis/models/: sentiment_model.pkl
tomas_per/: Dockerfile  Makefile  Portfolio Information Collection.pptx  README.md  main.py  pyproject.toml  sample.env
tomas_per/src/: exceptions.py  schema.py  settings.py
tomas_per/src/clients/: influxdb.py  t212.py
tomas_per/tests/: conftest.py  test_schema.py  test_t212_client.py
(+6 files in other folders)
