[project]
name = "stock-info-collection"
version = "0.1.0"
description = "Collects information on open positions in a Trading212 account."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "influxdb-client>=1.48.0",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.0",
]

[dependency-groups]
dev = [
    "coverage>=7.6.12",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "pytest-httpx>=0.35.0",
    "ruff>=0.9.7",
    "time-machine>=2.16.0",
]

[tool.coverage.run]
source = ["src/", "tests/"]